New Comic! and more (#178)
* small reorg

* randomcard rule

* randomRealCard and randomCardAlone tags

* updating #card#, #cardAlone#, and #realCard# usages to include cardfinder, part 1

* updating card rule usages to include cardfinder, part 2

* more gatherer rulings variations

* update classified image with new cardfinder randomizer

* touch up realization headlines

* changes

* realization - story time

* fix lint for mastadon-client

* more tip headline variety; more deck tech backgrounds

* remove no-longer-used card rules for classifieds

* minor rule renaming

* proper story headlines

* more flavor text; more vocab

* MTGO Twitter-style headline: blank of blank release events

* small changes

* mtgo event headlines part 1

* saving work

* venser comic - more text variety 1

* venser comic - more text variety 2

* uncomment dialog response

* a few more dialog variation for comic 2

* comic 3 text dimensions

* saving work

* delete old template image

* saving work

* comic #3

* clean up extra whitespace

--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -80,10 +80,15 @@
       "Yawgmoth#malePronouns#",
       "Zuul#femalePronouns#"
   ],
+  "characterFirstName": [
+    "#planeswalkerFirstName#",
+    "#commonCharacterFirstName#"
+  ],
   "commonCharacterFirstName": [
   	"Agathe",
   	"Borzard",
   	"Brigone",
+    "Brint",
     "Chaeska",
   	"Chadir",
   	"Devin",
@@ -100,6 +105,8 @@
   	"Juri",
   	"Maikal",
   	"Matoc",
+    "Maury",
+    "Meekus",
   	"Myznar",
   	"Naxtil",
   	"Nefara",
@@ -232,6 +239,7 @@
     "Boros",
   	"Cabal",
     "Ceta",
+    "Consulate",
   	"D'Avenant",
     "Dega",
     "Dimir",
