--- a/src/data/grammar/vocab/bodyparts.yaml
+++ b/src/data/grammar/vocab/bodyparts.yaml
@@ -73,43 +73,46 @@
   ],
 
   "bodypartsInternal": [
-    "eyes",
-    "stomach",,
-    "hair",
-    "teeth",
-    "eyeballs",
-    "fingernails",
-    "toenails",
-    "spine",
-    "brain",
-    "skeleton",
-    "intestines"
+    "heart[_isAre:is]",
+    "eyes[_isAre:are]",
+    "stomach[_isAre:is]",
+    "hair[_isAre:is]",
+    "teeth[_isAre:is]",
+    "eyeballs[_isAre:are]",
+    "fingernails[_isAre:are]",
+    "toenails[_isAre:are]",
+    "spine[_isAre:is]",
+    "brain[_isAre:is]",
+    "skeleton[_isAre:is]",
+    "intestines[_isAre:are]",
+    "kidneys[_isAre:are]",
+    "spleen[_isAre:is]",
+    "bellybutton[_isAre:is]"
   ],
 
   "bodypartsExternal": [
-    "head",
-    "nose",
-    "ears",
-    "mouth",
-    "neck",
-    "shoulders",
-    "arms",
-    "hands",
-    "legs",
-    "knees",
-    "feet",
-    "toes",
-    "gut",
-    "belly",
-    "throat",
-    "skull",
-    "moustache",
-    "elbows",
-    "pinkie toes",
-    "thumbs",
-    "shins",
-    "skin",
-    "lips",
-    "bellybutton"
+    "head[_isAre:is]",
+    "nose[_isAre:is]",
+    "ears[_isAre:are]",
+    "mouth[_isAre:is]",
+    "neck[_isAre:is]",
+    "belly[_isAre:is]",
+    "shoulders[_isAre:are]",
+    "arms[_isAre:are]",
+    "hands[_isAre:are]",
+    "legs[_isAre:are]",
+    "knees[_isAre:are]",
+    "feet[_isAre:are]",
+    "toes[_isAre:are]",
+    "gut[_isAre:are]",
+    "throat[_isAre:is][_isAre:are]",
+    "skull[_isAre:is][_isAre:are]",
+    "moustache[_isAre:is][_isAre:are]",
+    "elbows[_isAre:are]",
+    "pinkie toes[_isAre:are]",
+    "thumbs[_isAre:are]",
+    "shins[_isAre:are]",
+    "skin[_isAre:are]",
+    "lips[_isAre:are]"
   ]
 }
